Login Screen UI Modifications

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,162 +8,196 @@
     android:background="@color/colorPrimaryDark"
     tools:context=".activities.loginActivity.LoginActivity">
 
-    <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_above="@+id/ll_center"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"
-        android:src="@mipmap/ic_launcher" />
 
-    <LinearLayout
-        android:id="@+id/ll_center"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginEnd="30dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
-        android:orientation="vertical">
+        android:scrollbars="none"
+        android:fillViewport="true"
+        android:overScrollMode="never">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal">
+            android:layout_centerInParent="true"
+            android:orientation="vertical">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="5dp"
-                android:src="@drawable/ic_avatar" />
+                android:id="@+id/iv_logo"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="20dp"
+                android:src="@mipmap/ic_launcher" />
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/etUsernameLayout"
+            <LinearLayout
+                android:id="@+id/ll_center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:textColor="@color/white"
-                android:textColorHint="@color/font_black_5"
-                app:passwordToggleTint="@color/white"
-                android:theme="@style/MyEditTextTheme">
+                android:layout_below="@+id/iv_logo"
+                android:layout_marginEnd="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="30dp"
+                android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/et_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_email"
-                android:textColorHint="@color/font_black_5"
-                android:imeOptions="actionNext"
-                android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
-                android:inputType="text"
-                android:maxLength="8"
-                android:fontFamily="@font/lato_regular"
-                android:theme="@style/MyEditTextTheme"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+                    android:orientation="horizontal">
 
-            </android.support.design.widget.TextInputLayout>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5dp"
+                        android:src="@drawable/ic_avatar" />
 
-        </LinearLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/etUsernameLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/font_black_5"
+                        app:passwordToggleTint="@color/white"
+                        android:theme="@style/MyEditTextTheme">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal">
+                        <EditText
+                            android:id="@+id/et_email"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/prompt_email"
+                            android:textColorHint="@color/font_black_5"
+                            android:imeOptions="actionNext"
+                            android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
+                            android:inputType="text"
+                            android:maxLength="8"
+                            android:fontFamily="@font/lato_regular"
+                            android:theme="@style/MyEditTextTheme"
+                            android:textColor="@color/white"
+                            android:textSize="16sp" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="5dp"
-                android:src="@drawable/ic_lock" />
+                    </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/etPasswordLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:textColor="@color/white"
-                android:textColorHint="@color/font_black_5"
-                app:passwordToggleTint="@color/white"
-                android:theme="@style/MyEditTextTheme"
-                app:passwordToggleEnabled="true">
+                </LinearLayout>
 
-            <EditText
-                android:id="@+id/et_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_password"
-                android:textColorHint="@color/font_black_5"
-                android:imeOptions="actionDone"
-                android:maxLength="50"
-                android:maxLines="1"
-                android:fontFamily="@font/lato_regular"
-                android:textColor="@color/white"
-                android:singleLine="true"
-                android:textSize="16sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal">
 
-            </android.support.design.widget.TextInputLayout>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5dp"
+                        android:src="@drawable/ic_lock" />
 
-        </LinearLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/etPasswordLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/font_black_5"
+                        app:passwordToggleTint="@color/white"
+                        android:theme="@style/MyEditTextTheme"
+                        app:passwordToggleEnabled="true">
 
-        <Button
-            android:id="@+id/email_sign_in_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/button_bg_rounded_corners"
-            android:text="@string/action_sign_in"
-            android:fontFamily="@font/lato_bold"
-            android:textColor="@color/button_text_color"
-            android:textSize="16sp"
-            />
+                        <EditText
+                            android:id="@+id/et_password"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/prompt_password"
+                            android:textColorHint="@color/font_black_5"
+                            android:imeOptions="actionDone"
+                            android:maxLength="50"
+                            android:maxLines="1"
+                            android:fontFamily="@font/lato_regular"
+                            android:textColor="@color/white"
+                            android:singleLine="true"
+                            android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/cant_login_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginTop="10dp"
-            android:paddingBottom="5dp"
-            android:paddingEnd="10dp"
-            android:paddingStart="10dp"
-            android:includeFontPadding="false"
-            android:paddingTop="5dp"
-            android:fontFamily="@font/lato_bold"
-            android:text="@string/cant_login_user"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-             />
+                    </android.support.design.widget.TextInputLayout>
 
+                </LinearLayout>
 
-        <TextView
-            android:id="@+id/txt_signup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="16dp"
-            android:gravity="center_horizontal"
-            android:text="@string/txt_sign_up_option"
-            android:textColor="@color/white"
-            android:fontFamily="@font/lato_regular"
-            android:textSize="16sp"
-            android:textColorLink="@color/white"
-             />
+                <Button
+                    android:id="@+id/email_sign_in_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/button_bg_rounded_corners"
+                    android:text="@string/action_sign_in"
+                    android:fontFamily="@font/lato_bold"
+                    android:textColor="@color/button_text_color"
+                    android:textSize="16sp"
+                    />
+
+                <TextView
+                    android:id="@+id/cant_login_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="15dp"
+                    android:paddingBottom="5dp"
+                    android:paddingEnd="10dp"
+                    android:paddingStart="10dp"
+                    android:includeFontPadding="false"
+                    android:paddingTop="5dp"
+                    android:fontFamily="@font/lato_bold"
+                    android:text="@string/cant_login_user"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    />
 
 
+                <TextView
+                    android:id="@+id/txt_signup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="15dp"
+                    android:gravity="center_horizontal"
+                    android:text="@string/txt_sign_up_option"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="16sp"
+                    android:textColorLink="@color/white"
+                    />
+
+                <Button
+                    android:id="@+id/sign_up_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/button_bg_rounded_corners"
+                    android:text="@string/title_sign_up"
+                    android:fontFamily="@font/lato_bold"
+                    android:textColor="@color/button_text_color"
+                    android:textSize="16sp"
+                    android:layout_marginBottom="10dp"
+                    />
 
 
-    </LinearLayout>
+
+
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </ScrollView>
+
+
 </RelativeLayout>
