--- a/app/src/main/res/layout/content_visit_summary.xml
+++ b/app/src/main/res/layout/content_visit_summary.xml
@@ -579,10 +579,11 @@ Github: prajwalmw
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/visit_help_text"
-                        android:text="+91 9825989750"
+                        android:text="@string/txt_whatsapp_helpline"
                         android:textSize="@dimen/text_18sp"
                         android:layout_marginStart="10sp"
-                        android:fontFamily="@font/lato_medium" android:textColor="@color/txt_sub_header_color"
+                        android:fontFamily="@font/lato_medium"
+                        android:textColor="@color/txt_sub_header_color"
                         android:textStyle="bold"
                         android:background="@android:color/transparent"
                         android:drawableStart="@drawable/ic_icons8_whatsapp"
@@ -657,6 +658,7 @@ Github: prajwalmw
                         android:fontFamily="@font/lato_bold"
                         android:gravity="start|center"
                         android:hint=""
+                        android:textStyle="bold"
                         android:text="@string/teleconsult_request"
                         android:textColor="@color/txt_sub_header_color" />
 
