--- a/app/src/main/res/layout/activity_physical_exam.xml
+++ b/app/src/main/res/layout/activity_physical_exam.xml
@@ -23,6 +23,7 @@
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:titleTextAppearance="@style/title"
             android:visibility="gone"
             >
 
