--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,6 +26,13 @@
         <item name="android:windowTitleStyle">@style/TextAppearance.AppCompat.Title</item>
     </style>
 
+
+    <style name="title">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#373737</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
+    </style>
+
     <style name="CameraActivityStyle" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">@color/colorPrimary</item>
     </style>
@@ -81,7 +88,6 @@
 
 
     <!--Style changes related to the New Figma by venu N-->
-
 
     <style name="sign_up_title">
         <item name="android:textSize">16sp</item>
