--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -11,6 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
+        app:titleTextAppearance="@style/title"
         android:elevation="3dp">
 
         <TextView
