--- a/app/src/main/res/layout/activity_patient_detail.xml
+++ b/app/src/main/res/layout/activity_patient_detail.xml
@@ -39,6 +39,7 @@
                     android:layout_height="?attr/actionBarSize"
                     android:background="@color/colorPrimary"
                     app:layout_collapseMode="pin"
+                    app:titleTextAppearance="@style/title"
                     app:popupTheme="@style/AppTheme.PopupOverlay" />
 
             </android.support.design.widget.CollapsingToolbarLayout>
