--- a/app/src/main/res/layout/activity_privacy_notice_2.xml
+++ b/app/src/main/res/layout/activity_privacy_notice_2.xml
@@ -21,6 +21,7 @@
             android:background="@color/white"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:title="@string/privacy_notice_title"
+            app:titleTextAppearance="@style/title"
             app:titleTextColor="@color/font_black_0" />
 
     </android.support.design.widget.AppBarLayout>
@@ -40,7 +41,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
-            android:fontFamily="@fonts/Lato_Regular"
+            android:fontFamily="@font/lato_regular"
             android:text="@string/privacy_agree" />
 
         <TextView
@@ -50,7 +51,7 @@
             android:layout_marginVertical="15dp"
             android:layout_weight="0.25"
             android:drawableEnd="@drawable/ic_keyboard_arrow_right"
-            android:fontFamily="@fonts/Lato_Regular"
+            android:fontFamily="@font/lato_regular"
             android:foreground="?android:attr/selectableItemBackground"
             android:gravity="end"
             android:padding="10dp"
@@ -79,7 +80,7 @@
                 android:layout_height="0dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_weight="1"
-                android:fontFamily="@fonts/Lato_Regular"
+                android:fontFamily="@font/lato_regular"
                 android:padding="10dp"
                 android:autoLink="all"
                 android:textAlignment="gravity"
