--- a/app/src/main/res/layout/dialog_edit_entry.xml
+++ b/app/src/main/res/layout/dialog_edit_entry.xml
@@ -19,6 +19,7 @@
         android:id="@+id/textView_entry"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/lato_medium"
         android:scrollbars="vertical" />
 
     </ScrollView>
