--- a/app/src/main/res/layout/fragment_physical_exam.xml
+++ b/app/src/main/res/layout/fragment_physical_exam.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
+        android:fontFamily="@font/lato_regular"
         android:textSize="@dimen/physical_node_title"
         />
 
