--- a/app/src/main/res/layout/welcome_slide1.xml
+++ b/app/src/main/res/layout/welcome_slide1.xml
@@ -19,7 +19,7 @@
             android:layout_marginStart="20dp"
             android:text="@string/who_is_this_napplication_for"
             android:textColor="@color/font_black_0"
-            app:fontFamily="@fonts/Lato-Regular"
+            app:fontFamily="@font/lato_regular"
             android:textSize="30sp"
             android:textStyle="bold" />
 
@@ -29,7 +29,7 @@
             android:layout_marginTop="40dp"
             android:paddingStart="20dp"
             android:id="@+id/tv_intro_one"
-            app:fontFamily="@fonts/Lato-Regular"
+            app:fontFamily="@font/lato_regular"
             android:paddingEnd="20dp"
             tools:text="This app is for all types of health workers at the frontlines of care to learn about personal protection measures and PPE use."
             android:textColor="@color/font_black_0"
@@ -41,7 +41,7 @@
             android:layout_marginTop="20dp"
             android:paddingStart="20dp"
             android:id="@+id/tv_intro_two"
-            app:fontFamily="@fonts/Lato-Regular"
+            app:fontFamily="@font/lato_regular"
             android:paddingEnd="20dp"
             tools:text="You can monitor your own health daily and reach out for help if you think you may have had unsafe exposure and may be infected."
             android:textColor="@color/font_black_0"
