--- a/app/src/main/res/layout/content_visit_summary.xml
+++ b/app/src/main/res/layout/content_visit_summary.xml
@@ -567,7 +567,7 @@ Github: prajwalmw
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
                         android:fontFamily="@font/lato_regular"
-                        android:text="@string/if_you_get_much_sicker_please_call_your_nearest_doctor_020_26127394"
+                        android:text="@string/if_you_star"
                         android:layout_below="@id/help_title"
                         android:textSize="14sp"
                         android:textColor="@color/txt_sub_header_color"
