--- a/app/src/main/res/layout/dialog_mindmap_cred.xml
+++ b/app/src/main/res/layout/dialog_mindmap_cred.xml
@@ -13,6 +13,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:hint="@string/server_url"
+            android:fontFamily="@font/lato_regular"
             android:inputType="textAutoComplete"
             android:maxLines="1"
             android:singleLine="true" />
@@ -29,6 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:hint="@string/prompt_licensekey"
+            android:fontFamily="@font/lato_regular"
             android:inputType="textEmailAddress"
             android:maxLines="1"
             android:singleLine="true" />
